add download route

--- a/interpreter/Makefile
+++ b/interpreter/Makefile
@@ -6,14 +6,16 @@ CXXFLAGS := -std=c++11 -Wall -Wextra
 SRC_DIR := src
 OBJ_DIR := obj
 BIN_DIR := bin
+RELEASE_DIR := release
 
 # Files
 EXECUTABLE := $(BIN_DIR)/breeze
 SOURCES := $(wildcard $(SRC_DIR)/*.cpp)
 OBJECTS := $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SOURCES))
+ZIP_FILE := $(RELEASE_DIR)/breeze.zip
 
 # Default target
-all: $(EXECUTABLE)
+all: $(EXECUTABLE) zip
 
 # Rule to build the executable
 $(EXECUTABLE): $(OBJECTS)
@@ -25,6 +27,13 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
 	@mkdir -p $(OBJ_DIR)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
+# Rule to create a zip file with source files
+zip:
+	@mkdir -p $(RELEASE_DIR)
+	cd $(SRC_DIR) && zip -r ../$(ZIP_FILE) ./*
+
 # Clean build files
 clean:
-	rm -rf $(OBJ_DIR) $(BIN_DIR)
+	rm -rf $(OBJ_DIR) $(BIN_DIR) $(RELEASE_DIR)
+
+.PHONY: all zip clean
