--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 # Compiled Object files
 *.o
 *.obj
-bin/*
-obj/*
+interpreter/bin/*
+interpreter/obj/*
+interpreter/release/*
 
 # Precompiled Headers
 *.gch
